feat: update get products endpoint filtering by genre and/or sales
